feat: all current endpoints added to swagger-ui
