# src/main/java/com/greenfoxacademy/ebayclone/exeptions/GlobalExceptionHandler.java
@@ -4,6 +4,7 @@ import com.greenfoxacademy.ebayclone.dtos.MessageDTO;
 import com.greenfoxacademy.ebayclone.exeptions.user.PasswordInvalidException;
 import com.greenfoxacademy.ebayclone.exeptions.user.UsernameAlreadyInUseException;
 import jakarta.validation.ValidationException;
+import org.springframework.boot.web.reactive.error.DefaultErrorAttributes;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -18,9 +19,7 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
     public ResponseEntity<?> handleUsernameNotFoundException(
             UsernameNotFoundException usernameNotFoundException
     ) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(
-                new MessageDTO(usernameNotFoundException.getMessage())
-        );
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new MessageDTO(usernameNotFoundException.getMessage()));
     }
 
     @ExceptionHandler(PasswordInvalidException.class)
